# tube-explore

./: .dockerignore  .editorconfig  .gitignore  Analysis.md  Dockerfile  Makefile  Tasks.md  backend_design.md  design.md  docker-compose.yml  frontend_design.md  instructions.md  pyproject.toml  radarr_integration.md  requirements.txt  test.html
tests/: conftest.py  test_api.py  test_arr.py  test_db.py  test_radarr.py  test_ytdlp.py
tube_explore/: api.py  cli.py  config.py  db.py  models.py  radarr_client.py  schemas.py  ytdlp.py
tube_explore/arr/: base_client.py  crypto.py  db.py  models.py  path_mapper.py  radarr_client.py  routes.py  schemas.py  sonarr_client.py  sonarr_importer.py  sonarr_playlist_worker.py
web-ui/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js
web-ui/src/: app.css  app.html
web-ui/src/lib/api/: arr.ts  client.ts  downloads.ts  files.ts  health.ts  metadata.ts  outbox.ts  playlist.ts  presets.ts  profiles.ts  radarr.ts  search.ts  settings.ts  sonarr.ts  tasks.ts  types.ts
web-ui/src/lib/components/arr/: InstancesOverview.svelte  MissingEpisodes.svelte  SettingsIntegrations.svelte  SonarrEpisodeSearchContext.svelte  SonarrInstanceForm.svelte  SonarrInstances.svelte  SonarrPlaylistMapping.svelte
web-ui/src/lib/components/downloads/: DownloadOptionsForm.svelte  DownloadsPage.svelte  PlaylistDownloadDialog.svelte  QualityFields.svelte  VideoDownloadDialog.svelte
web-ui/src/lib/components/downloads/live/: DownloadTaskDetailDialog.svelte  LivePlaylistProgress.svelte  LiveVideoProgress.svelte  MiniPartsBar.svelte  StatsGrid.svelte
web-ui/src/lib/components/files/: FilesDialog.svelte  FilesPage.svelte
web-ui/src/lib/components/home/: HeroActionPanel.svelte  QuickManageCards.svelte  RecentActivity.svelte
web-ui/src/lib/components/layout/: AppShell.svelte  HealthPill.svelte  Icons.svelte  NotificationDropdown.svelte  Sidebar.svelte  TopBar.svelte
web-ui/src/lib/components/presets/: PresetFormDialog.svelte  PresetsDialog.svelte
web-ui/src/lib/components/profiles/: ProfileFormDialog.svelte  ProfilesDialog.svelte
web-ui/src/lib/components/radarr/: MissingMovies.svelte  RadarrInstanceForm.svelte  RadarrInstances.svelte  RadarrSearchContext.svelte  RadarrSettings.svelte
web-ui/src/lib/components/search/: MetadataResult.svelte  PlaylistResult.svelte  SearchResults.svelte
web-ui/src/lib/components/settings/: HealthDialog.svelte  SettingsDialog.svelte
web-ui/src/lib/components/shared/: ConfirmDialog.svelte  EmptyState.svelte  ErrorMessage.svelte  FileProgressRow.svelte  ModalFrame.svelte  PaginationControls.svelte  ProgressBar.svelte  StatusBadge.svelte  ToastHost.svelte
web-ui/src/lib/components/tasks/: TaskDetailDialog.svelte  TasksDialog.svelte
web-ui/src/lib/state/: event-stream.ts  task-stream.ts  toast-state.ts
web-ui/src/lib/utils/: format.ts
web-ui/src/routes/: +page.svelte
