[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "tube-explore"
version = "1.0.0"
description = "Media downloader & search back-end with FastAPI, SQLite, and profiles"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.139",
    "uvicorn>=0.49",
    "pydantic>=2.13.4",

    # yt-dlp zipimport binary runtime deps (https://github.com/yt-dlp/yt-dlp#dependencies)
    "yt-dlp-ejs>=0.8.0",           # EJS JavaScript runtime — required for YouTube
    "certifi",                      # Mozilla CA bundle for SSL
    "brotli>=1.2.0 ; implementation_name == 'cpython'",          # brotli decompression (CPython)
    "brotlicffi>=1.2.0.1 ; implementation_name != 'cpython'",   # brotli decompression (non-CPython)
    "requests>=2.32.2,<3",         # HTTP with proxy/persistent-connection support
    "urllib3>=2.0.2,<3",           # HTTP/1.1 pool manager (requests dep)
    "websockets>=13.0",            # WebSocket download support
    "mutagen",                     # Metadata embedding (--embed-thumbnail)
    "pycryptodomex",               # AES-128 HLS stream decryption

    # Radarr integration
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "mypy>=1.15",
]

[project.scripts]
tube-explore = "tube_explore.cli:main"

[tool.setuptools.packages.find]
include = ["tube_explore*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N812",  # lowercase imported as non-lowercase
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_return_any = false
warn_redundant_casts = true
